Oppgavebruker bestemmes av Vault